# photo_meta_organizer

./: .gitignore  LICENSE  README.md
DOCS/: ARCHITECTURE.md
photo_meta_organizer/: .gitignore  __init__.py  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
photo_meta_organizer/application/: __init__.py  orchestrators.py
photo_meta_organizer/application/interfaces/: __init__.py  image_extractor.py  image_repository.py  image_retriever.py
photo_meta_organizer/application/use_cases/: __init__.py  index_photos_use_case.py  parallel_index_photos_use_case.py  synchronize_metadata_use_case.py
photo_meta_organizer/domain/: __init__.py  models.py  services.py
photo_meta_organizer/infrastructure/: __init__.py  metrics.py
photo_meta_organizer/infrastructure/extractors/: disk_metadata_extractor.py
photo_meta_organizer/infrastructure/repositories/: __init__.py  tinydb_repository.py
photo_meta_organizer/infrastructure/retriever/: __init__.py  filtered_retriever.py  local_disk_retriever.py  s3_retriever.py
photo_meta_organizer/tests/: __init__.py  conftest.py
photo_meta_organizer/tests/integration/: test_sync_end_to_end.py
photo_meta_organizer/tests/unit/application/: __init__.py  test_interfaces.py  test_sync_use_case.py  test_use_cases.py
photo_meta_organizer/tests/unit/domain/: test_metadata_state_analyzer.py  test_models.py  test_services.py
photo_meta_organizer/tests/unit/infrastructure/: __init__.py  test_extractors.py
