[metadata]
name = photo-meta-organizer
version = 0.1.0
description = High-performance metadata indexing system for large photo libraries (20GB+)
author = Photo Meta Organizer Contributors
author_email = contact@example.com
url = https://github.com/example/photo-meta-organizer
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Multimedia :: Graphics
    Topic :: System :: Archiving :: Backup

[options]
packages = find:
python_requires = >=3.11
install_requires =
    Pillow>=10.0.0
    exifread>=3.0.0
    tinydb>=4.8.0
    python-dotenv>=1.0.0

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    mypy>=1.5.0
    ruff>=0.1.0
    black>=23.9.0

# ============================================================================
# MYPY CONFIGURATION - Static Type Checking
# ============================================================================
# Enforces strict type checking to catch bugs before runtime.
# The Photo Meta Organizer codebase follows strict mypy rules to ensure
# type safety, especially important for the immutable domain layer.
# ============================================================================

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True

# Strict mode: disallow unsafely inferred types
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_calls = True
disallow_untyped_decorators = True
check_untyped_defs = True
no_implicit_optional = True
warn_incomplete_stub = True

# Error reporting
show_error_codes = True
show_error_context = True
pretty = True

# Ignore type errors in test files (slightly relaxed for test code)
[mypy-tests.*]
ignore_errors = True
disallow_untyped_defs = False

# ============================================================================
# RUFF CONFIGURATION - Fast Python Linting
# ============================================================================
# Ruff performs linting, imports organization, and various code quality checks.
# Configured to follow PEP 8 and enforce clean code practices.
# ============================================================================

[ruff]
line-length = 100
target-version = py311
select = E,F,W,I,B,C4,UP,TRY
ignore = E501,E203

# ============================================================================
# BLACK CONFIGURATION - Code Formatter
# ============================================================================
# Black is used to automatically format code to PEP 8 standards.
# Black is opinionated and non-negotiable - all Python files should be
# formatted with Black to maintain consistency.
# ============================================================================
